Buttons 1. Arrow-buttons and invisible switchers in the mobile version 2. Mine and All Resources 1. Ukrainian resources

--- a/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
@@ -362,17 +362,9 @@
     <value>Holidays\ru\Holidays.xml</value>
   </data>
   <data name="msgBody" xml:space="preserve">
-    <value>Привычный календарь претерпел серьезные изменения: у нас новая основная тема и оформление. А кроме того:
+    <value>Исправлена опечатка на главной странице приложения, а поведение кнопок "Мои" и "Все" изменилось: теперь вы можете увидеть полный список своих и всех праздников в календаре.
 
-•  календарь стал лучше адаптироваться под размер вашего экрана;
-•  кнопка «перейти» стала бесплатной;
-•  вы можете просматривать список праздников на текущий месяц, нажав на соответствующую кнопку в меню под календарем;
-•  обновлены цветовые темы;
-•  добавлены новые списки праздников. 
-
-В приложении появилась реклама. Ее можно убрать, приобретя набор услуг, в который также входят уведомления и новые цветовые темы. Получить больше информации о платных услугах Вы сможете на странице настроек. 
-
-Спасибо что скачали это приложение! Предложения и сообщения об проблемах присылайте на адрес syanne.red@gmail.com. Так у нас с вами появится обратная связь, и ваше сообщение будет быстрее обработано. Чтобы отправить сообщение, используйте кнопку "поддержка" на нижней панели приложения.
+Спасибо что скачали это приложение и помогаете его развивать! Предложения и сообщения об проблемах присылайте на адрес syanne.red@gmail.com. Так у нас с вами появится обратная связь, и ваше сообщение будет быстрее обработано. Чтобы отправить сообщение, используйте кнопку "поддержка" на нижней панели приложения.
 
 Если вам понравилось приложение, не забудьте поставить оценку и оставить свой отзыв в магазине (кнопка "оценить").  Просмотреть это сообщение еще раз вы сможете, нажав на кнопку "о версии" на нижней панели приложения.
 
