--- a/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
@@ -361,17 +361,9 @@
     <value>стиль</value>
   </data>
   <data name="msgBody" xml:space="preserve">
-    <value>Звичний календар зазнав серйозних змін: у нас нова основна тема і оформлення. А також:
+    <value>Виправлено друкарську помилку на головній сторінці програми, а поведінка кнопок "Мої" та "Усі" змінилося: тепер ви можете побачити повний список своїх та усіх свят в календарі.
 
-•  календар став краще адаптуватися під розмір Вашого екрану; 
-•  кнопка «перейти» стала безкоштовною; 
-•  Ви можете переглядати список свят на поточний місяць, натиснувши на відповідну кнопку в меню під календарем;
-•  оновлено кольорове оформлення; 
-•  додано нові списки свят.
-
-У додатку з'явилася реклама. Її можна здихатися, придбавши набір послуг, в який також входять повідомлення і додаткові кольорові оформлення. Отримати більше інформації про платні послуги Ви зможете на сторінці налаштувань.
-
-Дякую що завантажили цей додаток! Пропозиції та повідомлення про проблеми надсилайте на адресу syanne.red@gmail.com. Таким чином у нас з вами з'явиться зворотний зв'язок, і ваше повідомлення буде швидше оброблено. Швидко перейти до вашого поштового клієнту допоможе кнопка "підтримка" на нижній панелі додатку.
+Спасибі, що завантажили цей додаток і допомагаєте його розвивати! Пропозиції та повідомлення про проблеми надсилайте на адресу syanne.red@gmail.com. Таким чином у нас з вами з'явиться зворотний зв'язок, і ваше повідомлення буде швидше оброблено. Швидко перейти до вашого поштового клієнту допоможе кнопка "підтримка" на нижній панелі додатку.
 
 Якщо вам сподобався календар, не забудьте оцінити його і залишити свій відгук в магазині (кнопка "оцінити"). Щоб переглянути це повідомлення ще раз натисніть кнопку "про версію" на нижній панелі додатку.
 
@@ -386,5 +378,8 @@ Syanne.</value>
   </data>
   <data name="support.Label" xml:space="preserve">
     <value>підтримка</value>
+  </data>
+  <data name="LocalHolidaysPath1" xml:space="preserve">
+    <value>Holidays\uk\Holidays.xml</value>
   </data>
 </root>
