1. название приложения 2. новые пакеты

--- a/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/ru/Resources.resw
@@ -154,7 +154,7 @@
     <value>введите название события:</value>
   </data>
   <data name="typesTopString.Text" xml:space="preserve">
-    <value>выберите не более 3 видов:</value>
+    <value>категории:</value>
   </data>
   <data name="Wd1.Content" xml:space="preserve">
     <value>пн</value>
