Resources and date 1. images for style in different languages 2. chages in .resx files 3. new type of repetition - monthly 4.

--- a/Calendar/Calendar.Shared/Holidays/en-CA/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/en-CA/Resources.resw
@@ -135,9 +135,6 @@
   <data name="delNote.Content" xml:space="preserve">
     <value>remove</value>
   </data>
-  <data name="everyYear.Content" xml:space="preserve">
-    <value>every year</value>
-  </data>
   <data name="GoToDate.Text" xml:space="preserve">
     <value>go to</value>
   </data>
@@ -199,7 +196,7 @@
     <value>set the period and amount of days before the notification</value>
   </data>
   <data name="ApplicationDescription" xml:space="preserve">
-    <value>Calendar app with large set of holidays </value>
+    <value>Calendar app with large set of holidays</value>
   </data>
   <data name="ApplicationDisplayName" xml:space="preserve">
     <value>Calendar + Holidays</value>
@@ -374,5 +371,17 @@ Syanne.</value>
   </data>
   <data name="Weekend" xml:space="preserve">
     <value>0</value>
+  </data>
+  <data name="themePictures" xml:space="preserve">
+    <value>Holidays/en/themes</value>
+  </data>
+  <data name="everyMonth.Content" xml:space="preserve">
+    <value>monthly</value>
+  </data>
+  <data name="everyWeek.Content" xml:space="preserve">
+    <value>weekly</value>
+  </data>
+  <data name="everyYear.Content" xml:space="preserve">
+    <value>yearly</value>
   </data>
 </root>
