--- a/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
+++ b/Calendar/Calendar.Shared/Holidays/uk/Resources.resw
@@ -382,7 +382,7 @@ Syanne.</value>
   <data name="themePictures" xml:space="preserve">
     <value>Holidays/uk/themePictures</value>
   </data>
-  <data name="every.Content" xml:space="preserve">
+  <data name="everyMonth.Content" xml:space="preserve">
     <value>щомісяця</value>
   </data>
   <data name="everyWeek.Content" xml:space="preserve">
